k8s/dev-servicea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: dev-servicea
spec:
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
