k8s/dev-servicea/deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
  namespace: dev-servicea
spec:
  podSelector: {}
  policyTypes:
    - Egress
